# soundbridge

./: LICENSE  README.md  pyproject.toml  setup.sh  uninstall.sh
bluetooth_audio_connector/: __init__.py  _utils.py  app.py  audio.py  avrcp.py  bluetooth.py  mpris.py  notifications.py  settings.py  tray.py  window.py
bluetooth_audio_connector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
wireplumber/: 51-bluez-a2dp-sink.conf
